--- a/index.html
+++ b/index.html
@@ -4,17 +4,98 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="./css/reset.css">
+  <link rel="stylesheet" href="./css/base.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.5.0/css/all.css">
 </head>
 
 <body>
-  <!-- Wrokの部分のテキストはこちらを使ってください -->
-  <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
-  dolore magna
-  aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-  consequat. Duis
-  aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur
-  sint -->
+
+  <header class="header">
+    <div class="inner header__content">
+      <div class="logo">
+        <i class="fas fa-archway"></i>
+      </div>
+      <a href="#" class="btn-contact">Contact</a>
+    </div>
+  </header>
+
+  <main>
+    <section class="kv">
+      <div class="kv__content">
+        <h1>WEB PRODUCTION COMPANY</h1>
+        <p>DIRECTION, CONTENT MARKETING</p>
+      </div>
+    </section>
+
+    <section class="work">
+      <div class="inner work__content">
+        <div class="work__img">
+          <img src="/Users/mutsuki/html/lp-practice/img/pc/pc.png" alt="WORKイメージ">
+        </div>
+        <div class="work__text">
+          <h2>WORK</h2>
+          <p>
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+            ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+            eu fugiat nulla pariatur. Excepteur sint
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <section class="skills">
+      <div class="inner">
+        <h2>WE ARE SKILLS</h2>
+        <div class="skills__grid">
+          <img src="/Users/mutsuki/html/lp-practice/img/skills/skills_1.png" alt="Skill 1">
+          <img src="/Users/mutsuki/html/lp-practice/img/skills/skills_2.png" alt="Skill 2">
+          <img src="/Users/mutsuki/html/lp-practice/img/skills/skills_3.png" alt="Skill 3">
+          <img src="/Users/mutsuki/html/lp-practice/img/skills/skills_4.png" alt="Skill 4">
+          <img src="/Users/mutsuki/html/lp-practice/img/skills/skills_5.png" alt="Skill 5">
+          <img src="/Users/mutsuki/html/lp-practice/img/skills/skills_6.png" alt="Skill 6">
+        </div>
+      </div>
+    </section>
+
+    <section class="plan">
+      <div class="inner">
+        <h2>SELECT PLAN</h2>
+        <table>
+          <thead>
+            <tr>
+              <th>PLAN</th>
+              <th>BASIC PLAN</th>
+              <th>STANDARD PLAN</th>
+              <th>ENTERPRISE PLAN</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr><th>PRICE</th><td>¥100,000</td><td>¥200,000</td><td>¥300,000</td></tr>
+            <tr><th>DELIVERY</th><td>Manuscript</td><td>HTML</td><td>Manuscript, HTML, PSD</td></tr>
+            <tr><th>ANALYSIS</th><td>◯</td><td>◯</td><td>◯</td></tr>
+            <tr><th>IMPROVEMENT</th><td>×</td><td>◯</td><td>◯</td></tr>
+            <tr><th>DESIGN</th><td>×</td><td>×</td><td>◯</td></tr>
+          </tbody>
+        </table>
+      </div>
+    </section>
+
+    <nav class="sns">
+      <ul>
+        <li><i class="fab fa-facebook-f"></i></li>
+        <li><i class="fab fa-dribbble"></i></li>
+        <li><i class="fab fa-twitter"></i></li>
+        <li><i class="fas fa-envelope"></i></li>
+      </ul>
+    </nav>
+  </main>
+
+  <footer>
+    <small>Copyright(c)</small>
+  </footer>
 </body>
 
 </html>
