--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <section class="work">
       <div class="inner work__content">
         <div class="work__img">
-          <img src="/Users/mutsuki/html/lp-practice/img/pc/pc.png" alt="WORKイメージ">
+          <img src="img/pc/pc.png" alt="WORKイメージ">
         </div>
         <div class="work__text">
           <h2>WORK</h2>
@@ -50,12 +50,12 @@
       <div class="inner">
         <h2>WE ARE SKILLS</h2>
         <div class="skills__grid">
-          <img src="/Users/mutsuki/html/lp-practice/img/skills/skills_1.png" alt="Skill 1">
-          <img src="/Users/mutsuki/html/lp-practice/img/skills/skills_2.png" alt="Skill 2">
-          <img src="/Users/mutsuki/html/lp-practice/img/skills/skills_3.png" alt="Skill 3">
-          <img src="/Users/mutsuki/html/lp-practice/img/skills/skills_4.png" alt="Skill 4">
-          <img src="/Users/mutsuki/html/lp-practice/img/skills/skills_5.png" alt="Skill 5">
-          <img src="/Users/mutsuki/html/lp-practice/img/skills/skills_6.png" alt="Skill 6">
+          <img src="img/skills/skills_1.png" alt="Skill 1">
+          <img src="img/skills/skills_2.png" alt="Skill 2">
+          <img src="img/skills/skills_3.png" alt="Skill 3">
+          <img src="img/skills/skills_4.png" alt="Skill 4">
+          <img src="img/skills/skills_5.png" alt="Skill 5">
+          <img src="img/skills/skills_6.png" alt="Skill 6">
         </div>
       </div>
     </section>
